[package]
name = "forwarder"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"
readme = "README.md"
description = "Minimal server that forwards all HTTP requests to my blog"
homepage = "https://github.com/dnaka91/forwarder"
repository = "https://github.com/dnaka91/forwarder"

[dependencies]
hyper = "0.13.6"
tokio = { version = "0.2.21", features = ["macros", "rt-core", "signal"] }

[profile.release]
lto = true
panic = "abort"
