[package]
name = "forwarder"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"
readme = "README.md"
description = "Minimal server that forwards all HTTP requests to my blog"
homepage = "https://github.com/dnaka91/forwarder"
repository = "https://github.com/dnaka91/forwarder"

[dependencies]
hyper = { version = "0.14.15", features = ["http1", "http2", "server", "tcp"] }
tokio = { version = "1.14.0", features = ["macros", "rt", "signal"] }

[profile.release]
lto = true
