[package]
name = "forwarder"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"
readme = "README.md"
description = "Minimal server that forwards all HTTP requests to my blog"
homepage = "https://github.com/dnaka91/forwarder"
repository = "https://github.com/dnaka91/forwarder"

[dependencies]
anyhow = "1.0.86"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = "1.3.1"
hyper-util = { version = "0.1.5", features = ["http1", "http2", "server-auto", "server-graceful", "tokio"] }
tokio = { version = "1.38.0", features = ["macros", "rt", "time"] }
tokio-shutdown = { version = "0.1.4", default-features = false }

[profile.release]
lto = true
strip = true
